--- a/Pear/Controllers/Onboarding/Get Started Flow/GetStartedAgeViewController.storyboard
+++ b/Pear/Controllers/Onboarding/Get Started Flow/GetStartedAgeViewController.storyboard
@@ -43,10 +43,9 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BM3-YV-E5Y">
-                                <rect key="frame" x="147.5" y="167.5" width="80" height="50"/>
+                                <rect key="frame" x="0.0" y="167.5" width="375" height="50"/>
                                 <color key="tintColor" red="0.53333333329999999" green="0.53333333329999999" blue="0.53333333329999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="80" id="Lj3-jl-h8I"/>
                                     <constraint firstAttribute="height" constant="50" id="po2-4f-gN0"/>
                                 </constraints>
                                 <nil key="textColor"/>
@@ -54,7 +53,7 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="words" keyboardType="numberPad"/>
                             </textField>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="koz-AY-7uv">
-                                <rect key="frame" x="147.5" y="216.5" width="80" height="1"/>
+                                <rect key="frame" x="0.0" y="216.5" width="375" height="1"/>
                                 <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="1" id="Onv-H7-cCU"/>
@@ -68,6 +67,7 @@
                             <constraint firstItem="koz-AY-7uv" firstAttribute="bottom" secondItem="BM3-YV-E5Y" secondAttribute="bottom" id="AJZ-Rl-7qo"/>
                             <constraint firstItem="u9I-2u-syv" firstAttribute="top" secondItem="MeJ-Y0-Fah" secondAttribute="top" constant="20" id="AlW-sq-2jV"/>
                             <constraint firstItem="Xvv-dV-nKy" firstAttribute="top" secondItem="u9I-2u-syv" secondAttribute="bottom" constant="20" id="AsJ-21-2df"/>
+                            <constraint firstItem="BM3-YV-E5Y" firstAttribute="width" secondItem="XO2-yK-MQS" secondAttribute="width" id="CHj-CW-IAh"/>
                             <constraint firstItem="u9I-2u-syv" firstAttribute="leading" secondItem="MeJ-Y0-Fah" secondAttribute="leading" constant="20" id="N6h-P0-hi3"/>
                             <constraint firstItem="BM3-YV-E5Y" firstAttribute="top" secondItem="Xvv-dV-nKy" secondAttribute="bottom" constant="40" id="ONd-X7-zo3"/>
                             <constraint firstItem="MeJ-Y0-Fah" firstAttribute="trailing" secondItem="k3L-py-veU" secondAttribute="trailing" constant="20" id="SMa-xi-kRN"/>
