--- a/Pear/Controllers/Onboarding/Get Started Flow/GetStartedSampleBiosViewController.storyboard
+++ b/Pear/Controllers/Onboarding/Get Started Flow/GetStartedSampleBiosViewController.storyboard
@@ -47,43 +47,30 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pBs-hS-7bV">
-                                <rect key="frame" x="40" y="211" width="295" height="426"/>
-                                <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="onboarding-sample-profile" translatesAutoresizingMaskIntoConstraints="NO" id="tuW-lJ-cfF">
-                                        <rect key="frame" x="0.0" y="0.0" width="295" height="426"/>
-                                    </imageView>
-                                </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstItem="tuW-lJ-cfF" firstAttribute="width" secondItem="pBs-hS-7bV" secondAttribute="width" id="KtF-9r-QQC"/>
-                                    <constraint firstItem="tuW-lJ-cfF" firstAttribute="centerX" secondItem="pBs-hS-7bV" secondAttribute="centerX" id="SDE-UL-oHt"/>
-                                    <constraint firstItem="tuW-lJ-cfF" firstAttribute="height" secondItem="pBs-hS-7bV" secondAttribute="height" id="XDQ-no-MnQ"/>
-                                    <constraint firstItem="tuW-lJ-cfF" firstAttribute="centerY" secondItem="pBs-hS-7bV" secondAttribute="centerY" id="d2r-Xp-YNV"/>
-                                </constraints>
-                            </view>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eAQ-cc-JHP">
+                                <rect key="frame" x="0.0" y="211" width="375" height="426"/>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="P0n-R7-zhA" firstAttribute="leading" secondItem="7Wq-hw-MAC" secondAttribute="leading" constant="40" id="0V5-6W-9eW"/>
                             <constraint firstItem="wg8-KI-T3v" firstAttribute="leading" secondItem="7Wq-hw-MAC" secondAttribute="leading" constant="20" id="9YK-yr-QWU"/>
-                            <constraint firstItem="7Wq-hw-MAC" firstAttribute="bottom" secondItem="pBs-hS-7bV" secondAttribute="bottom" constant="30" id="AQ5-Ej-GDH"/>
+                            <constraint firstItem="eAQ-cc-JHP" firstAttribute="leading" secondItem="7Wq-hw-MAC" secondAttribute="leading" id="BsK-5z-iwG"/>
                             <constraint firstItem="1qi-N5-al0" firstAttribute="leading" secondItem="wg8-KI-T3v" secondAttribute="trailing" constant="8" id="CE1-ha-JuJ"/>
-                            <constraint firstItem="pBs-hS-7bV" firstAttribute="centerX" secondItem="7Wq-hw-MAC" secondAttribute="centerX" id="Efm-X8-MEi"/>
                             <constraint firstItem="P0n-R7-zhA" firstAttribute="centerX" secondItem="7Wq-hw-MAC" secondAttribute="centerX" id="Gh8-RQ-ZqD"/>
-                            <constraint firstItem="7Wq-hw-MAC" firstAttribute="trailing" secondItem="pBs-hS-7bV" secondAttribute="trailing" constant="40" id="Ijy-wR-dUi"/>
                             <constraint firstItem="1qi-N5-al0" firstAttribute="centerX" secondItem="7Wq-hw-MAC" secondAttribute="centerX" id="LF0-IT-AB2"/>
                             <constraint firstItem="7Wq-hw-MAC" firstAttribute="trailing" secondItem="P0n-R7-zhA" secondAttribute="trailing" constant="40" id="NrP-Q0-7tB"/>
                             <constraint firstItem="1qi-N5-al0" firstAttribute="top" secondItem="wg8-KI-T3v" secondAttribute="top" id="S2b-AJ-Idn"/>
+                            <constraint firstItem="eAQ-cc-JHP" firstAttribute="top" secondItem="P0n-R7-zhA" secondAttribute="bottom" constant="30" id="VKg-be-v6q"/>
                             <constraint firstItem="P0n-R7-zhA" firstAttribute="top" secondItem="1qi-N5-al0" secondAttribute="bottom" constant="16" id="YKE-UY-oqu"/>
-                            <constraint firstItem="pBs-hS-7bV" firstAttribute="top" secondItem="P0n-R7-zhA" secondAttribute="bottom" constant="30" id="eaB-gK-Bsr"/>
+                            <constraint firstItem="7Wq-hw-MAC" firstAttribute="trailing" secondItem="eAQ-cc-JHP" secondAttribute="trailing" id="oMQ-fp-sfC"/>
                             <constraint firstItem="wg8-KI-T3v" firstAttribute="top" secondItem="7Wq-hw-MAC" secondAttribute="top" constant="20" id="qKy-Et-PwC"/>
-                            <constraint firstItem="pBs-hS-7bV" firstAttribute="leading" secondItem="7Wq-hw-MAC" secondAttribute="leading" constant="40" id="x7W-rv-NF7"/>
+                            <constraint firstItem="7Wq-hw-MAC" firstAttribute="bottom" secondItem="eAQ-cc-JHP" secondAttribute="bottom" constant="30" id="zoU-X4-fjQ"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="7Wq-hw-MAC"/>
                     </view>
                     <connections>
-                        <outlet property="profileCardView" destination="pBs-hS-7bV" id="Ipb-yC-Okw"/>
+                        <outlet property="scrollView" destination="eAQ-cc-JHP" id="xnI-EO-eHa"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ees-sx-A1G" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -93,6 +80,5 @@
     </scenes>
     <resources>
         <image name="onboarding-close-button" width="96" height="96"/>
-        <image name="onboarding-sample-profile" width="786" height="1225"/>
     </resources>
 </document>
