--- a/Pear/Controllers/Onboarding/Get Started Flow/GetStartedSampleBiosViewController.storyboard
+++ b/Pear/Controllers/Onboarding/Get Started Flow/GetStartedSampleBiosViewController.storyboard
@@ -48,12 +48,18 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eAQ-cc-JHP">
-                                <rect key="frame" x="0.0" y="211" width="375" height="426"/>
+                                <rect key="frame" x="0.0" y="211" width="375" height="436"/>
                             </scrollView>
+                            <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="HhH-KQ-OeJ">
+                                <rect key="frame" x="168" y="630" width="39" height="37"/>
+                                <color key="pageIndicatorTintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="currentPageIndicatorTintColor" red="0.40000000000000002" green="0.40000000000000002" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
+                            </pageControl>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="P0n-R7-zhA" firstAttribute="leading" secondItem="7Wq-hw-MAC" secondAttribute="leading" constant="40" id="0V5-6W-9eW"/>
+                            <constraint firstItem="HhH-KQ-OeJ" firstAttribute="centerX" secondItem="7Wq-hw-MAC" secondAttribute="centerX" id="0l9-Wm-GKw"/>
                             <constraint firstItem="wg8-KI-T3v" firstAttribute="leading" secondItem="7Wq-hw-MAC" secondAttribute="leading" constant="20" id="9YK-yr-QWU"/>
                             <constraint firstItem="eAQ-cc-JHP" firstAttribute="leading" secondItem="7Wq-hw-MAC" secondAttribute="leading" id="BsK-5z-iwG"/>
                             <constraint firstItem="1qi-N5-al0" firstAttribute="leading" secondItem="wg8-KI-T3v" secondAttribute="trailing" constant="8" id="CE1-ha-JuJ"/>
@@ -63,13 +69,15 @@
                             <constraint firstItem="1qi-N5-al0" firstAttribute="top" secondItem="wg8-KI-T3v" secondAttribute="top" id="S2b-AJ-Idn"/>
                             <constraint firstItem="eAQ-cc-JHP" firstAttribute="top" secondItem="P0n-R7-zhA" secondAttribute="bottom" constant="30" id="VKg-be-v6q"/>
                             <constraint firstItem="P0n-R7-zhA" firstAttribute="top" secondItem="1qi-N5-al0" secondAttribute="bottom" constant="16" id="YKE-UY-oqu"/>
+                            <constraint firstItem="7Wq-hw-MAC" firstAttribute="bottom" secondItem="HhH-KQ-OeJ" secondAttribute="bottom" id="nLS-f3-vLo"/>
                             <constraint firstItem="7Wq-hw-MAC" firstAttribute="trailing" secondItem="eAQ-cc-JHP" secondAttribute="trailing" id="oMQ-fp-sfC"/>
                             <constraint firstItem="wg8-KI-T3v" firstAttribute="top" secondItem="7Wq-hw-MAC" secondAttribute="top" constant="20" id="qKy-Et-PwC"/>
-                            <constraint firstItem="7Wq-hw-MAC" firstAttribute="bottom" secondItem="eAQ-cc-JHP" secondAttribute="bottom" constant="30" id="zoU-X4-fjQ"/>
+                            <constraint firstItem="7Wq-hw-MAC" firstAttribute="bottom" secondItem="eAQ-cc-JHP" secondAttribute="bottom" constant="20" id="zoU-X4-fjQ"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="7Wq-hw-MAC"/>
                     </view>
                     <connections>
+                        <outlet property="pageControl" destination="HhH-KQ-OeJ" id="nMC-b4-9LZ"/>
                         <outlet property="scrollView" destination="eAQ-cc-JHP" id="xnI-EO-eHa"/>
                     </connections>
                 </viewController>
